<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ET_fName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fName" />
    <EditText
        android:id="@+id/ET_lName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lName" />
    <EditText
        android:id="@+id/ET_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/ET_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/ET_proDetDevice"
        android:layout_width="match_parent"
        android:gravity="start"
        android:layout_height="150dp"
        android:hint="@string/descOfTProb" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Update" />

        <Button
            android:id="@+id/buttonDeleteArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete" />
    </LinearLayout>
</LinearLayout>

