<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ET_fNameCP"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:hint="@string/fName"
        android:paddingStart="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text"/>
    <EditText
        android:id="@+id/ET_lNameCP"
        android:background="@drawable/edit_text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:paddingStart="15dp"
        android:layout_height="46dp"
        android:hint="@string/lName" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ET_phoneCP"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:layout_height="46dp"
            android:hint="@string/telephone"
            android:paddingStart="15dp"
            android:inputType="phone" />


    </LinearLayout>

    <EditText
        android:id="@+id/ET_emailCP"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text"
        android:layout_height="46dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/ET_nameDeviceCP"
            android:layout_width="200dp"
            android:layout_height="46dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/nameDevice"
            android:paddingStart="15dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/ET_modelDeviceCP"
            android:layout_width="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/edit_text"
            android:hint="@string/deviceModel"
            android:paddingStart="15dp"
            android:inputType="text"/>
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_intUr">
    </Spinner>


    <EditText
        android:id="@+id/ET_proDetDeviceCP"
        android:layout_width="match_parent"
        android:background="@drawable/edit_text"
        android:gravity="start"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:hint="@string/descOfTProb" />






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Update" />

        <Button
            android:id="@+id/buttonDeleteArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete" />
    </LinearLayout>
</LinearLayout>

