<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eranp.clientpage.ClientPageData">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/cliData"
            android:textSize="40dp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/TVCusDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/detOfTCus"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="58dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/name_img" />

            <TextView
                android:id="@+id/fName_TV"
                android:layout_width="125dp"
                android:layout_height="46dp"
                android:focusable="false"
                android:inputType="text"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/fName"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:focusable="false"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/lName"
                android:id="@+id/lName_TV"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="58dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/phone_img" />

            <TextView
                android:id="@+id/phone_TV"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:focusable="false"
                android:background="@drawable/edit_text"
                android:hint="@string/telephone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewEmail_img"
                android:layout_width="64dp"
                android:layout_height="58dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/email_img" />

            <TextView
                android:id="@+id/mail_TV"
                android:layout_width="278dp"
                android:layout_height="46dp"
                android:focusable="false"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/detOfTDev"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="47dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/name_dev_img" />
            <TextView
                android:layout_width="276dp"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text"
                android:id="@+id/nameDevice_TV"
                android:focusable="false"
                android:hint="@string/nameDevice"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/model_dev_img"/>
            <TextView
                android:layout_width="290dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edit_text"
                android:id="@+id/modelDevice_TV"
                android:hint="@string/deviceModel"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25dp"
            android:id="@+id/descOfTProb_TV"
            android:hint="@string/descOfTProb"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"


           />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <Button

                android:layout_marginStart="10dp"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/save"
                android:background="@drawable/btn_bkg"
                android:textColor="@color/White"
                android:id="@+id/save_btn"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/White"
                android:background="@drawable/btn_bkg"
                android:id="@+id/set_btn"
                android:text="@string/set"
                />

            <Button

                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/White"
                android:background="@drawable/btn_bkg"
                android:id="@+id/delete_btn"
                android:text="@string/delete"
                />
            <Button

                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_bkg"
                android:textColor="@color/White"
                android:id="@+id/callN_btn"
                android:text="call now"
                android:layout_marginEnd="10dp"
                />
            <Button

                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/setP_btn"
                android:text="Problem set"
                android:visibility="gone"
                />

        </LinearLayout>

        <Button

            android:id="@+id/closeCase_Btn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_bkg"
            android:text="@string/Ccase"
            android:layout_marginTop="15dp"
            android:textColor="@color/White" />








    </LinearLayout>




</ScrollView>
