<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    tools:context="com.example.eranp.clientpage.MainActivity">




    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="20dp" />


            </LinearLayout>


            <TextView
                android:id="@+id/TVCusDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/detOfTCus"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/name_img" />

                <EditText
                    android:id="@+id/fName_ET"
                    android:layout_width="125dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/fName"
                    android:inputType="text"

                    android:padding="10dp" />

                <EditText
                    android:id="@+id/lName_ET"
                    android:layout_width="290dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/lName"
                    android:padding="10dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phone_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/phone_img"

                    />

                <EditText
                    android:id="@+id/phone_ET"
                    android:layout_width="290dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewEmail_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/email_img" />

                <EditText
                    android:id="@+id/mail_ET"
                    android:layout_width="290dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/detOfTDev"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/name_dev_img" />

                <EditText
                    android:id="@+id/name_device"
                    android:layout_width="290dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/nameDevice"
                    android:padding="10dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/model_dev_img" />

                <EditText
                    android:id="@+id/model_device"
                    android:layout_width="290dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/deviceModel"
                    android:padding="10dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="end"

                android:orientation="vertical">


                <Button
                    android:id="@+id/next_btn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_bkg"
                    android:text="@string/next"
                    android:textColor="@color/White"
                    android:textSize="20dp" />


            </LinearLayout>





        </LinearLayout>


    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:menu="@menu/drawer_view"
        app:itemIconTint="@color/nav_itmes_color"
        app:itemTextColor="@color/nav_itmes_color"
        android:background="@color/colorPrimary"
        android:id="@+id/bottomNavView_Bar"
        android:layout_marginTop="20dp"
        ></android.support.design.widget.BottomNavigationView>



</LinearLayout>
