<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    tools:context="com.example.eranp.clientpage.CustomerAdapter">


    <ImageView
        android:layout_width="10dp"
        android:layout_height="90dp"
        android:id="@+id/urgentcP"
        android:layout_gravity="start"
        android:background="@drawable/urgent_1"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/name_img"
            android:layout_marginTop="10dp"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/textVFNameCp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/fName"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/textVLnameCp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/Black"
            android:text="@string/lName"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/tVDateCp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:gravity="end"
        android:paddingStart="320dp"
        android:paddingTop="10dp"
        android:text="date" />
    <TextView
        android:text="@string/telephone"
        android:textSize="15dp"
        android:id="@+id/textVTeleleCp"
        android:paddingTop="33dp"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="64dp"
        android:textColor="@color/Black"/>

    <TextView
        android:id="@+id/pro_device_det_shortCp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingStart="90dp"
        android:paddingTop="50dp"
        android:text="@string/descOfTProb"
        android:textSize="18dp" />





</RelativeLayout>
