<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="start"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"

    tools:context="com.example.eranp.clientpage.CustomerAdapter">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_gravity="start"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/name_img"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/textVFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fName"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/textVLname"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/Black"
            android:text="@string/lName"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:text="@string/telephone"
        android:textSize="15dp"
        android:id="@+id/textVTelele"
        android:paddingTop="33dp"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:textColor="@color/Black"/>


</RelativeLayout>
